--- a/primeraversion-index-css/inde1x.html
+++ b/primeraversion-index-css/inde1x.html
@@ -31,7 +31,7 @@ de nuestra página, los links externos para usar fuentes, íconos, animaciones, 
     que van a intervenir en nuestro html.
     HREF es en donde colocaremos la ruta en dónde se encuentra ese archivo css,
     recomendable utilizar "./" ya que de lo contrario podríamos tener problemas a futuro-->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./styles2.css" />
     <!-- Hacemos lo mismo que antes, pero ahora vinculamos con nuestra hoja de estilos 
     donde le daremos "vida", desde cambiar colores de texto hastcambiar los tamaños de las secciones
     de nuestra página entre otras cosas-->
